--- a/src/view/HomePage.fxml
+++ b/src/view/HomePage.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
    <children>
       <Text layoutX="237.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Post">
@@ -23,11 +22,11 @@
       </Text>
       <TextField layoutX="81.0" layoutY="158.0" prefHeight="25.0" prefWidth="175.0" />
       <Text layoutX="23.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Post Text" />
-      <TableView layoutX="93.0" layoutY="186.0" prefHeight="200.0" prefWidth="414.0">
+      <TableView fx:id="postTable" layoutX="93.0" layoutY="186.0" prefHeight="200.0" prefWidth="414.0">
         <columns>
-          <TableColumn prefWidth="95.0" text="PostID" />
-          <TableColumn prefWidth="96.0" text="PostDate" />
-            <TableColumn prefWidth="220.0" text="Post" />
+          <TableColumn fx:id="ID" prefWidth="95.0" text="PostID" />
+          <TableColumn fx:id="Date" prefWidth="96.0" text="PostDate" />
+            <TableColumn fx:id="Post" prefWidth="220.0" text="Post" />
         </columns>
       </TableView>
       <Button layoutX="263.0" layoutY="158.0" mnemonicParsing="false" onAction="#createPost" text="Create" />
