--- a/src/view/HomePage.fxml
+++ b/src/view/HomePage.fxml
@@ -20,7 +20,7 @@
             <Font size="24.0" />
          </font>
       </Text>
-      <TextField layoutX="81.0" layoutY="158.0" prefHeight="25.0" prefWidth="175.0" />
+      <TextField fx:id="textboxPost" layoutX="81.0" layoutY="158.0" prefHeight="25.0" prefWidth="175.0" />
       <Text layoutX="23.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Post Text" />
       <TableView fx:id="postTable" layoutX="93.0" layoutY="186.0" prefHeight="200.0" prefWidth="414.0">
         <columns>
@@ -30,7 +30,8 @@
         </columns>
       </TableView>
       <Button layoutX="263.0" layoutY="158.0" mnemonicParsing="false" onAction="#createPost" text="Create" />
-      <Button layoutX="326.0" layoutY="158.0" mnemonicParsing="false" onAction="#deletePost" text="Delete" />
-      <Button layoutX="390.0" layoutY="158.0" mnemonicParsing="false" onAction="#updatePost" text="Update" />
+      <Button layoutX="401.0" layoutY="158.0" mnemonicParsing="false" onAction="#deletePost" text="Delete" />
+      <Button layoutX="462.0" layoutY="158.0" mnemonicParsing="false" onAction="#updatePost" text="Update" />
+      <Button layoutX="320.0" layoutY="158.0" mnemonicParsing="false" onAction="#viewPost" text="View Posts" />
    </children>
 </AnchorPane>
