Made the delete button functional. Made the needed methods to get the delete button working.

--- a/src/view/HomePage.fxml
+++ b/src/view/HomePage.fxml
@@ -30,8 +30,9 @@
         </columns>
       </TableView>
       <Button layoutX="263.0" layoutY="158.0" mnemonicParsing="false" onAction="#createPost" text="Create" />
-      <Button layoutX="401.0" layoutY="158.0" mnemonicParsing="false" onAction="#deletePost" text="Delete" />
-      <Button layoutX="462.0" layoutY="158.0" mnemonicParsing="false" onAction="#updatePost" text="Update" />
+      <Button layoutX="517.0" layoutY="188.0" mnemonicParsing="false" onAction="#deletePost" text="Delete" />
+      <Button layoutX="406.0" layoutY="158.0" mnemonicParsing="false" onAction="#updatePost" text="Update" />
       <Button layoutX="320.0" layoutY="158.0" mnemonicParsing="false" onAction="#viewPost" text="View Posts" />
+      <Button layoutX="515.0" layoutY="225.0" mnemonicParsing="false" onAction="#updateSelect" text="Update" />
    </children>
 </AnchorPane>
