--- a/src/view/HomePage.fxml
+++ b/src/view/HomePage.fxml
@@ -24,7 +24,7 @@
             <Image url="@../../../../af25daf8bce653ec9eaca859569d360d.png" />
          </image>
       </ImageView>
-      <Button layoutX="165.0" layoutY="26.0" mnemonicParsing="false" text="Friends" />
+      <Button layoutX="165.0" layoutY="26.0" mnemonicParsing="false" onAction="#showFriends" text="Friends" />
       <Button layoutX="250.0" layoutY="26.0" mnemonicParsing="false" text="Home" />
       <Button layoutX="327.0" layoutY="26.0" mnemonicParsing="false" onAction="#actionshowProfile" text="Profile" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8f8f8" height="105.0" layoutX="92.0" layoutY="107.0" stroke="#979797" strokeType="INSIDE" width="374.0" />
