--- a/src/view/FriendsPage.fxml
+++ b/src/view/FriendsPage.fxml
@@ -8,12 +8,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="689.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FriendController">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <Button layoutX="55.0" layoutY="118.0" mnemonicParsing="false" onAction="#viewUsers" text="View All Users" />
-      <TableView fx:id="userTable" layoutX="180.0" layoutY="102.0" prefHeight="200.0" prefWidth="420.0">
+      <Button layoutX="57.0" layoutY="181.0" mnemonicParsing="false" onAction="#viewUsers" text="View All Users" />
+      <TableView fx:id="userTable" layoutX="182.0" layoutY="165.0" prefHeight="200.0" prefWidth="420.0">
         <columns>
           <TableColumn fx:id="uID" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="uName" prefWidth="75.0" text="Name" />
@@ -21,29 +19,33 @@
             <TableColumn fx:id="uNotes" prefWidth="193.0" text="Notes" />
         </columns>
       </TableView>
-      <Button layoutX="64.0" layoutY="165.0" mnemonicParsing="false" onAction="#addFriend" text="Add Friend" />
-      <Text layoutX="253.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Make Friends">
+      <Button layoutX="66.0" layoutY="228.0" mnemonicParsing="false" onAction="#addFriend" text="Add Friend" />
+      <Text layoutX="255.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Make Friends">
          <font>
             <Font size="31.0" />
          </font>
       </Text>
-      <TableView fx:id="friendTable" layoutX="180.0" layoutY="428.0" prefHeight="200.0" prefWidth="420.0">
+      <TableView fx:id="friendTable" layoutX="182.0" layoutY="491.0" prefHeight="200.0" prefWidth="420.0">
         <columns>
           <TableColumn fx:id="fID" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="fName" prefWidth="115.0" text="Name" />
             <TableColumn fx:id="fNotes" prefWidth="229.0" text="Notes" />
         </columns>
       </TableView>
-      <Text layoutX="254.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View Friends">
+      <Text layoutX="256.0" layoutY="454.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View Friends">
          <font>
             <Font size="31.0" />
          </font>
       </Text>
-      <Button layoutX="59.0" layoutY="456.0" mnemonicParsing="false" onAction="#viewFriends" text="View Friends" />
-      <Button layoutX="53.0" layoutY="503.0" mnemonicParsing="false" onAction="#deleteFriend" text="Remove Friend" />
-      <TextField fx:id="uSearchText" layoutX="340.0" layoutY="77.0" prefHeight="25.0" prefWidth="149.0" />
-      <Button layoutX="253.0" layoutY="77.0" mnemonicParsing="false" onAction="#searchUsers" text="Search Name" />
-      <TextField fx:id="fSearchText" layoutX="340.0" layoutY="403.0" prefHeight="25.0" prefWidth="149.0" />
-      <Button layoutX="253.0" layoutY="403.0" mnemonicParsing="false" onAction="#searchFriends" text="Search Name" />
+      <Button layoutX="61.0" layoutY="519.0" mnemonicParsing="false" onAction="#viewFriends" text="View Friends" />
+      <Button layoutX="55.0" layoutY="566.0" mnemonicParsing="false" onAction="#deleteFriend" text="Remove Friend" />
+      <TextField fx:id="uSearchText" layoutX="342.0" layoutY="140.0" prefHeight="25.0" prefWidth="149.0" />
+      <Button layoutX="255.0" layoutY="140.0" mnemonicParsing="false" onAction="#searchUsers" text="Search Name" />
+      <TextField fx:id="fSearchText" layoutX="342.0" layoutY="466.0" prefHeight="25.0" prefWidth="149.0" />
+      <Button layoutX="255.0" layoutY="466.0" mnemonicParsing="false" onAction="#searchFriends" text="Search Name" />
+      <Button layoutX="206.0" layoutY="33.0" mnemonicParsing="false" opacity="0.43" text="Friends" />
+      <Button layoutX="291.0" layoutY="33.0" mnemonicParsing="false" onAction="#actionShowHome" text="Home" />
+      <Button layoutX="368.0" layoutY="33.0" mnemonicParsing="false" onAction="#actionShowProfile" text="Profile" />
+      <Button layoutX="510.0" layoutY="33.0" mnemonicParsing="false" onAction="#actionShowMessages" text="Messages" />
    </children>
 </AnchorPane>
