--- a/src/view/ProfilePage.fxml
+++ b/src/view/ProfilePage.fxml
@@ -5,29 +5,34 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="643.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="741.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfileController">
    <children>
-      <TextField fx:id="idField" layoutX="120.0" layoutY="63.0" />
-      <TextField fx:id="nameField" layoutX="120.0" layoutY="97.0" />
-      <TextField fx:id="ageField" layoutX="120.0" layoutY="132.0" />
-      <TextField fx:id="gradyrField" layoutX="120.0" layoutY="165.0" />
-      <Text layoutX="85.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
-      <Text layoutX="68.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
-      <Text layoutX="73.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" />
-      <Text layoutX="14.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Graduation Year:" />
-      <TextArea fx:id="bioField" layoutX="300.0" layoutY="108.0" prefHeight="87.0" prefWidth="132.0" />
-      <Text layoutX="304.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Biography:" />
-      <ImageView fx:id="profilepic" fitHeight="150.0" fitWidth="200.0" layoutX="466.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+      <TextField fx:id="idField" layoutX="102.0" layoutY="376.0" prefHeight="16.0" prefWidth="84.0" />
+      <TextField fx:id="nameField" layoutX="101.0" layoutY="412.0" />
+      <TextField fx:id="ageField" layoutX="100.0" layoutY="448.0" />
+      <TextField fx:id="gradyrField" layoutX="100.0" layoutY="487.0" />
+      <Text layoutX="78.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
+      <Text layoutX="61.0" layoutY="429.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
+      <Text layoutX="66.0" layoutY="465.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" />
+      <Text layoutX="7.0" layoutY="504.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Graduation Year:" />
+      <TextArea fx:id="bioField" layoutX="300.0" layoutY="404.0" prefHeight="104.0" prefWidth="150.0" />
+      <Text layoutX="300.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Biography:" />
+      <ImageView fx:id="profilepic" fitHeight="150.0" fitWidth="149.0" layoutX="577.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Pictures/profilepic.png" />
-         </image>
-      </ImageView>
-      <TableView fx:id="profileTable" layoutX="42.0" layoutY="237.0" prefHeight="200.0" prefWidth="567.0">
+            <Image url="@../resource/images/caroline.png" />
+         </image></ImageView>
+      <TableView fx:id="profileTable" layoutX="23.0" layoutY="87.0" prefHeight="237.0" prefWidth="572.0" style="-fx-background-color: SNOW;">
         <columns>
           <TableColumn fx:id="ID" prefWidth="51.999996185302734" text="ID" />
           <TableColumn fx:id="Name" prefWidth="129.20001220703125" text="Name" />
@@ -36,13 +41,39 @@
             <TableColumn fx:id="Bio" prefWidth="228.0" text="Bio" />
         </columns>
       </TableView>
-      <Button layoutX="71.0" layoutY="200.0" mnemonicParsing="false" onAction="#createProfile" text="Create" />
-      <Button layoutX="138.0" layoutY="200.0" mnemonicParsing="false" onAction="#updateProfile" text="Update" />
-      <Button layoutX="206.0" layoutY="200.0" mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
-      <Button layoutX="269.0" layoutY="200.0" mnemonicParsing="false" onAction="#viewProfiles" text="View Profiles" />
-      <Button layoutX="256.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowHome" text="Home" />
-      <Button layoutX="185.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowFriends" text="Friends" />
-      <Button layoutX="328.0" layoutY="22.0" mnemonicParsing="false" text="Profile" />
-      <Button layoutX="398.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowMessages" text="Messages" />
+      <Button layoutX="49.0" layoutY="343.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="24.0" text="+">
+         <font>
+            <Font name="Segoe UI Semilight" size="12.0" />
+         </font></Button>
+      <Button layoutX="92.0" layoutY="343.0" mnemonicParsing="false" onAction="#updateProfile" text="Edit Profile">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="199.0" layoutY="343.0" mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
+      <Button layoutX="280.0" layoutY="343.0" mnemonicParsing="false" onAction="#viewProfiles" text="View Profiles" />
+      <Button layoutX="304.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowHome" text="Home" />
+      <Button layoutX="221.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowFriends" text="Friends" />
+      <Button layoutX="386.0" layoutY="22.0" mnemonicParsing="false" text="Profile" />
+      <Button layoutX="478.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowMessages" text="Messages" />
+      <Text layoutX="34.0" layoutY="78.0" stroke="#959798" strokeType="OUTSIDE" strokeWidth="0.0" text="My Profile">
+         <font>
+            <Font name="Segoe UI Semilight" size="35.0" />
+         </font>
+         <effect>
+            <Glow>
+               <input>
+                  <Lighting>
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant />
+                     </light>
+                  </Lighting>
+               </input>
+            </Glow>
+         </effect>
+      </Text>
+      <Circle fill="#1f93ff00" layoutX="652.0" layoutY="106.0" radius="92.0" stroke="WHITE" strokeType="INSIDE" />
    </children>
 </AnchorPane>
