--- a/src/view/MessagePage.fxml
+++ b/src/view/MessagePage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="593.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MessageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="593.0" prefWidth="573.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MessageController">
    <children>
       <ImageView fitHeight="72.0" fitWidth="86.0" layoutX="2.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,7 +18,7 @@
       <Button layoutX="165.0" layoutY="26.0" mnemonicParsing="false" onAction="#actionShowFriends" text="Friends" />
       <Button layoutX="250.0" layoutY="26.0" mnemonicParsing="false" onAction="#actionShowHome" text="Home" />
       <Button layoutX="327.0" layoutY="26.0" mnemonicParsing="false" onAction="#actionShowProfile" text="Profile" />
-      <Button layoutX="469.0" layoutY="26.0" mnemonicParsing="false" text="Messages" />
+      <Button layoutX="469.0" layoutY="26.0" mnemonicParsing="false" opacity="0.43" text="Messages" />
       <TableView fx:id="messageTable" layoutX="101.0" layoutY="97.0" prefHeight="391.0" prefWidth="378.0">
         <columns>
           <TableColumn fx:id="ID" prefWidth="39.055686950683594" text="ID" />
