--- a/src/view/HomePage.fxml
+++ b/src/view/HomePage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="593.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="593.0" prefWidth="573.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
    <children>
       <TableView fx:id="postTable" layoutX="74.0" layoutY="251.0" prefHeight="262.0" prefWidth="414.0">
         <columns>
@@ -25,7 +25,7 @@
          </image>
       </ImageView>
       <Button layoutX="165.0" layoutY="26.0" mnemonicParsing="false" onAction="#showFriends" text="Friends" />
-      <Button layoutX="250.0" layoutY="26.0" mnemonicParsing="false" text="Home" />
+      <Button layoutX="250.0" layoutY="26.0" mnemonicParsing="false" opacity="0.43" text="Home" />
       <Button layoutX="327.0" layoutY="26.0" mnemonicParsing="false" onAction="#actionshowProfile" text="Profile" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8f8f8" height="105.0" layoutX="92.0" layoutY="107.0" stroke="#979797" strokeType="INSIDE" width="374.0" />
       <TextField fx:id="textboxPost" layoutX="149.0" layoutY="123.0" prefHeight="27.0" prefWidth="252.0" promptText="What's on your mind?" />
