--- a/src/view/HomePage.fxml
+++ b/src/view/HomePage.fxml
@@ -19,9 +19,9 @@
         </columns>
       </TableView>
       <Button layoutX="446.0" layoutY="525.0" mnemonicParsing="false" onAction="#deletePost" prefHeight="27.0" prefWidth="63.0" text="Delete" />
-      <ImageView fitHeight="72.0" fitWidth="86.0" layoutX="2.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="initData" fitHeight="72.0" fitWidth="86.0" layoutX="2.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../af25daf8bce653ec9eaca859569d360d.png" />
+            <Image url="@../resource/images/Logo.png" />
          </image>
       </ImageView>
       <Button layoutX="165.0" layoutY="26.0" mnemonicParsing="false" onAction="#showFriends" text="Friends" />
