--- a/src/view/FriendsPage.fxml
+++ b/src/view/FriendsPage.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -47,5 +49,10 @@
       <Button layoutX="291.0" layoutY="33.0" mnemonicParsing="false" onAction="#actionShowHome" text="Home" />
       <Button layoutX="368.0" layoutY="33.0" mnemonicParsing="false" onAction="#actionShowProfile" text="Profile" />
       <Button layoutX="510.0" layoutY="33.0" mnemonicParsing="false" onAction="#actionShowMessages" text="Messages" />
+      <ImageView fx:id="initData" fitHeight="72.0" fitWidth="86.0" layoutX="12.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resource/images/Logo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
