--- a/src/view/ProfilePage.fxml
+++ b/src/view/ProfilePage.fxml
@@ -16,23 +16,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="741.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="564.0" prefWidth="741.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfileController">
    <children>
-      <TextField fx:id="idField" layoutX="102.0" layoutY="376.0" prefHeight="16.0" prefWidth="84.0" />
-      <TextField fx:id="nameField" layoutX="101.0" layoutY="412.0" />
-      <TextField fx:id="ageField" layoutX="100.0" layoutY="448.0" />
-      <TextField fx:id="gradyrField" layoutX="100.0" layoutY="487.0" />
-      <Text layoutX="78.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
-      <Text layoutX="61.0" layoutY="429.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
-      <Text layoutX="66.0" layoutY="465.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" />
-      <Text layoutX="7.0" layoutY="504.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Graduation Year:" />
-      <TextArea fx:id="bioField" layoutX="300.0" layoutY="404.0" prefHeight="104.0" prefWidth="150.0" />
-      <Text layoutX="300.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Biography:" />
+      <TextField fx:id="idField" layoutX="113.0" layoutY="405.0" prefHeight="16.0" prefWidth="84.0" />
+      <TextField fx:id="nameField" layoutX="112.0" layoutY="441.0" />
+      <TextField fx:id="ageField" layoutX="111.0" layoutY="477.0" />
+      <TextField fx:id="gradyrField" layoutX="111.0" layoutY="516.0" />
+      <Text layoutX="75.0" layoutY="419.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
+      <Text layoutX="58.0" layoutY="455.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
+      <Text layoutX="63.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" />
+      <Text layoutX="4.0" layoutY="530.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Graduation Year:" />
+      <TextArea fx:id="bioField" layoutX="311.0" layoutY="433.0" prefHeight="104.0" prefWidth="150.0" />
+      <Text layoutX="311.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Biography:" />
       <ImageView fx:id="profilepic" fitHeight="150.0" fitWidth="149.0" layoutX="577.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../resource/images/caroline.png" />
          </image></ImageView>
-      <TableView fx:id="profileTable" layoutX="23.0" layoutY="87.0" prefHeight="237.0" prefWidth="572.0" style="-fx-background-color: SNOW;">
+      <TableView fx:id="profileTable" layoutX="20.0" layoutY="113.0" prefHeight="237.0" prefWidth="572.0" style="-fx-background-color: SNOW;">
         <columns>
           <TableColumn fx:id="ID" prefWidth="51.999996185302734" text="ID" />
           <TableColumn fx:id="Name" prefWidth="129.20001220703125" text="Name" />
@@ -41,21 +41,21 @@
             <TableColumn fx:id="Bio" prefWidth="228.0" text="Bio" />
         </columns>
       </TableView>
-      <Button layoutX="49.0" layoutY="343.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="24.0" text="+">
+      <Button layoutX="46.0" layoutY="369.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="24.0" text="+">
          <font>
             <Font name="Segoe UI Semilight" size="12.0" />
          </font></Button>
-      <Button layoutX="92.0" layoutY="343.0" mnemonicParsing="false" onAction="#updateProfile" text="Edit Profile">
+      <Button layoutX="89.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateProfile" text="Edit Profile">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="199.0" layoutY="343.0" mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
-      <Button layoutX="280.0" layoutY="343.0" mnemonicParsing="false" onAction="#viewProfiles" text="View Profiles" />
+      <Button layoutX="196.0" layoutY="369.0" mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
+      <Button layoutX="277.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewProfiles" text="View Profiles" />
       <Button layoutX="304.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowHome" text="Home" />
       <Button layoutX="221.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowFriends" text="Friends" />
       <Button layoutX="386.0" layoutY="22.0" mnemonicParsing="false" opacity="0.43" text="Profile" />
       <Button layoutX="478.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowMessages" text="Messages" />
-      <Text layoutX="34.0" layoutY="78.0" stroke="#959798" strokeType="OUTSIDE" strokeWidth="0.0" text="My Profile">
+      <Text layoutX="31.0" layoutY="104.0" stroke="#959798" strokeType="OUTSIDE" strokeWidth="0.0" text="My Profile">
          <font>
             <Font name="Segoe UI Semilight" size="35.0" />
          </font>
@@ -74,6 +74,11 @@
             </Glow>
          </effect>
       </Text>
-      <Circle fill="#1f93ff00" layoutX="652.0" layoutY="106.0" radius="92.0" stroke="WHITE" strokeType="INSIDE" />
+      <Circle fill="#1f93ff00" layoutX="649.0" layoutY="132.0" radius="92.0" stroke="WHITE" strokeType="INSIDE" />
+      <ImageView fx:id="initData" fitHeight="72.0" fitWidth="86.0" layoutX="12.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resource/images/Logo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
