--- a/src/view/ProfilePage.fxml
+++ b/src/view/ProfilePage.fxml
@@ -5,10 +5,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Glow?>
-<?import javafx.scene.effect.Light.Distant?>
-<?import javafx.scene.effect.Lighting?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -22,7 +18,6 @@
       <TextField fx:id="nameField" layoutX="112.0" layoutY="441.0" />
       <TextField fx:id="ageField" layoutX="111.0" layoutY="477.0" />
       <TextField fx:id="gradyrField" layoutX="111.0" layoutY="516.0" />
-      <Text layoutX="75.0" layoutY="419.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
       <Text layoutX="58.0" layoutY="455.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
       <Text layoutX="63.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" />
       <Text layoutX="4.0" layoutY="530.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Graduation Year:" />
@@ -32,7 +27,7 @@
          <image>
             <Image url="@../resource/images/caroline.png" />
          </image></ImageView>
-      <TableView fx:id="profileTable" layoutX="20.0" layoutY="113.0" prefHeight="237.0" prefWidth="572.0" style="-fx-background-color: SNOW;">
+      <TableView fx:id="profileTable" layoutX="20.0" layoutY="113.0" prefHeight="237.0" prefWidth="572.0" style="-fx-background-color: WHITE;">
         <columns>
           <TableColumn fx:id="ID" prefWidth="51.999996185302734" text="ID" />
           <TableColumn fx:id="Name" prefWidth="129.20001220703125" text="Name" />
@@ -41,44 +36,37 @@
             <TableColumn fx:id="Bio" prefWidth="228.0" text="Bio" />
         </columns>
       </TableView>
-      <Button layoutX="46.0" layoutY="369.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="24.0" text="+">
-         <font>
-            <Font name="Segoe UI Semilight" size="12.0" />
-         </font></Button>
-      <Button layoutX="89.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateProfile" text="Edit Profile">
+      <Button layoutX="24.0" layoutY="369.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="56.0" style="-fx-background-color: LIGHTYELLOW;" text="Create">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="196.0" layoutY="369.0" mnemonicParsing="false" onAction="#deleteProfile" text="Delete" />
-      <Button layoutX="277.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewProfiles" text="View Profiles" />
+      <Button layoutX="98.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateProfile" style="-fx-background-color: LIGHTYELLOW;" text="Edit Profile">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="196.0" layoutY="369.0" mnemonicParsing="false" onAction="#deleteProfile" style="-fx-background-color: LIGHTYELLOW;" text="Delete">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="277.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewProfiles" style="-fx-background-color: LIGHTYELLOW;" text="View Profiles">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
       <Button layoutX="304.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowHome" text="Home" />
       <Button layoutX="221.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowFriends" text="Friends" />
       <Button layoutX="386.0" layoutY="22.0" mnemonicParsing="false" opacity="0.43" text="Profile" />
       <Button layoutX="478.0" layoutY="22.0" mnemonicParsing="false" onAction="#actionshowMessages" text="Messages" />
-      <Text layoutX="31.0" layoutY="104.0" stroke="#959798" strokeType="OUTSIDE" strokeWidth="0.0" text="My Profile">
-         <font>
-            <Font name="Segoe UI Semilight" size="35.0" />
-         </font>
-         <effect>
-            <Glow>
-               <input>
-                  <Lighting>
-                     <bumpInput>
-                        <Shadow />
-                     </bumpInput>
-                     <light>
-                        <Light.Distant />
-                     </light>
-                  </Lighting>
-               </input>
-            </Glow>
-         </effect>
-      </Text>
-      <Circle fill="#1f93ff00" layoutX="649.0" layoutY="132.0" radius="92.0" stroke="WHITE" strokeType="INSIDE" />
+      <Circle fill="#1f93ff00" layoutX="652.0" layoutY="103.0" radius="89.0" stroke="WHITE" strokeType="INSIDE" />
       <ImageView fx:id="initData" fitHeight="72.0" fitWidth="86.0" layoutX="12.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../resource/images/Logo.png" />
          </image>
       </ImageView>
+      <Text layoutX="114.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="My Profile">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Text>
+      <Text layoutX="73.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
    </children>
 </AnchorPane>
