--- a/src/view/FriendsProfilePage.fxml
+++ b/src/view/FriendsProfilePage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: LIGHTCYAN;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FriendProfileController">
    <children>
       <ImageView fx:id="profilePic" fitHeight="150.0" fitWidth="200.0" layoutX="206.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
       <Text layoutX="233.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name: " />
