--- a/src/view/ProfilePage.fxml
+++ b/src/view/ProfilePage.fxml
@@ -36,19 +36,19 @@
             <TableColumn fx:id="Bio" prefWidth="228.0" text="Bio" />
         </columns>
       </TableView>
-      <Button layoutX="24.0" layoutY="369.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="56.0" style="-fx-background-color: LIGHTYELLOW;" text="Create">
+      <Button layoutX="24.0" layoutY="369.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="25.0" prefWidth="56.0" text="Create">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="98.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateProfile" style="-fx-background-color: LIGHTYELLOW;" text="Edit Profile">
+      <Button layoutX="98.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateProfile" text="Edit Profile">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="196.0" layoutY="369.0" mnemonicParsing="false" onAction="#deleteProfile" style="-fx-background-color: LIGHTYELLOW;" text="Delete">
+      <Button layoutX="196.0" layoutY="369.0" mnemonicParsing="false" onAction="#deleteProfile" text="Delete">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="277.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewProfiles" style="-fx-background-color: LIGHTYELLOW;" text="View Profiles">
+      <Button layoutX="277.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewProfiles" text="View Profiles">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
