--- a/src/view/ProfilePage.fxml
+++ b/src/view/ProfilePage.fxml
@@ -66,5 +66,7 @@
             <Font size="28.0" />
          </font>
       </Text>
+      <TextField layoutX="112.0" layoutY="405.0" prefHeight="17.0" prefWidth="68.0" />
+      <Text layoutX="64.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID:" />
    </children>
 </AnchorPane>
